--- a/src/appCatatanHarian.form
+++ b/src/appCatatanHarian.form
@@ -82,9 +82,9 @@
                               </Group>
                               <Group type="102" attributes="0">
                                   <Component id="btnTambah" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Component id="btnUbah" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
                                   <Component id="btnBersihkan" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
